Add simple-html-calculator and mario-pest-control

--- a/exercises/simple-html-calculator/index.html
+++ b/exercises/simple-html-calculator/index.html
@@ -8,9 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <main id="calculator" class="calculator">
-    
-  </main>
+  <main id="calculator" class="calculator"></main>
   <script src="./app.js"></script>
 </body>
 </html>
